实现VTK显示窗口，并添加CMake Release预设

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,23 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(Qt6 REQUIRED COMPONENTS Widgets)
+find_package(Qt6 REQUIRED COMPONENTS 
+    Widgets 
+    OpenGLWidgets
+)
+
+find_package(VTK REQUIRED COMPONENTS 
+    CommonCore
+    CommonDataModel
+    FiltersCore
+    FiltersGeneral
+    GUISupportQt 
+    RenderingCore
+    RenderingOpenGL2
+    InteractionStyle
+    RenderingFreeType
+    CommonExecutionModel
+)
 
 find_package(PCL 1.15 REQUIRED COMPONENTS common io filters visualization)
 include_directories(${PCL_INCLUDE_DIRS})
@@ -27,7 +43,8 @@ file(GLOB_RECURSE PROJECT_SOURCES
 qt_add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${PROJECT_SOURCES})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
-    Qt6::Widgets
+    ${Qt6_LIBRARIES} 
     ${PCL_LIBRARIES}
     ${OpenCV_LIBS}
+    ${VTK_LIBRARIES}
 )
