修改了CMakeLists.txt并添加示例文件

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,3 +50,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
     ${OpenCV_LIBS}
     ${VTK_LIBRARIES}
 )
+
+set_target_properties(${YOUR_TARGET} PROPERTIES
+    WIN32_EXECUTABLE TRUE
+)
